--- a/.github/workflows/ui.yml
+++ b/.github/workflows/ui.yml
@@ -19,6 +19,9 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./ui
     
     strategy:
       matrix:
@@ -35,13 +38,10 @@ jobs:
           node-version: ${{ matrix.node-version }}
         
       - name: Install dependencies
-        working-directory: ./ui
         run: npm install
       
       - name: Run lint
-        working-directory: ./ui
         run: npm run lint
         
       - name: Run unit tests
-        working-directory: ./ui
         run: npm run test:unit
