sign up endpoint

--- a/api/package.json
+++ b/api/package.json
@@ -13,11 +13,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "mongoose": "^5.13.2",
     "restify": "^7.5.0",
     "restify-clients": "^2.6.4",
     "restify-cors-middleware": "^1.1.1",
-    "restify-errors": "^6.1.1"
+    "restify-errors": "^6.1.1",
+    "validator": "^13.6.0"
   },
   "devDependencies": {
     "eslint": "^7.30.0",
