--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.2",
     "restify": "^7.5.0",
     "restify-clients": "^2.6.4",
