--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,7 @@
     "restify-clients": "^2.6.4",
     "restify-cors-middleware": "^1.1.1",
     "restify-errors": "^6.1.1",
+    "sanitize-html": "^2.4.0",
     "validator": "^13.6.0"
   },
   "devDependencies": {
