fix to run apps on docker

--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -1,8 +1,6 @@
 FROM node:14
 
-RUN npm install -g http-server
-
-WORKDIR /usr/src/app/my-app
+WORKDIR /usr/src/app/
 
 COPY package*.json ./
 
@@ -10,8 +8,6 @@ RUN npm install
 
 COPY . .
 
-RUN npm run build
-
 EXPOSE 8080
 
-CMD [ "http-server", "dist" ]
+CMD [ "npm", "run", "serve" ]
